# task_management_challenge

./: .gitignore  Dockerfile  INSTALL.md  README.md  docker-compose.yml  manage.py  pyproject.toml
project/: forms.py  models.py  urls.py  views.py
project/migrations/: 0001_initial.py  0002_initial.py
staff/: admin.py  forms.py  models.py  urls.py  views.py
staff/migrations/: 0001_initial.py  0002_auto_20240909_1237.py
task_management_challenge/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html  home.html  index.html  navbar.html
templates/project/: create_project.html  create_task.html  list_project.html  list_task.html  project_detail.html
templates/registration/: login.html
templates/staff/: create_staff.html  list_staff.html
