[tool.poetry]
name = "task-management-challenge"
version = "0.1.0"
description = ""
authors = ["mascDriver <diogoblibi@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
